# AIGmesh

./: CMakeLists.txt  aig.cpp  aig.hpp  connect.cpp  genpng.py  hie.cpp  main.cpp  mesh.cpp
include/: aig.hpp  global.hpp  solver.hpp
src/: hie.cpp  main.cpp  solver.cpp
